added-header.blade

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,7 @@
 @use './partials/variables' as *;
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 $fa-font-path: "../fonts/webfonts" !default;
 
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
@@ -8,3 +10,39 @@ $fa-font-path: "../fonts/webfonts" !default;
 @import "~@fortawesome/fontawesome-free/scss/brands";
 
 @import '~bootstrap/scss/bootstrap';
+
+body{
+    font-family: 'Roboto','sans-serif';
+}
+
+// HEADER
+header{
+    height: 120px;
+}
+.box-logo{
+    height: 80px;
+    width: 80px;
+
+    img{
+        width: 100%;
+        height: 100%;
+    }
+}
+ul{
+    display: flex;
+    gap: 20px;
+
+    li a{
+        text-decoration: none;
+        color: black;
+        text-transform: uppercase;
+        font-family: 'Roboto','sans-serif';
+        font-weight: 600;
+        font-size: 0.9rem;
+        cursor: pointer;
+
+        &:hover {
+            border-bottom: 3px solid #0281f9;
+        }
+    }
+}
