--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -46,3 +46,15 @@ ul{
         }
     }
 }
+
+// HERO
+.box-hero{
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+
+    img{
+        width: 100%;
+        min-height: 400px;
+    }
+}
