printed-comics (config db)

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -58,3 +58,51 @@ ul{
         min-height: 400px;
     }
 }
+
+//MAIN
+main{
+    background-color: #1c1c1c;
+    padding-bottom: 40px;
+    padding-top: 55px;
+    position: relative;
+
+    h4{
+        background-color: #0281f9;
+        position: absolute;
+        top:-20px;
+        left: 300px;
+        font-weight: 600;
+    }
+    .card{
+        width: 95%;
+        border: none;
+        background-color: transparent;
+        cursor: pointer;
+    }
+    .box-image{
+        height: 180px;
+        width: 90%;
+        margin: auto;
+
+        img{
+            height: 100%;
+            width: 100%;
+            object-fit: cover;
+            object-position: top;
+        }
+    }
+    .title{
+        font-size: 0.8rem;
+        color: white;
+        font-weight: 400;
+    }
+    button{
+        color: white;
+        text-transform: uppercase;
+        background-color: #0281f9;
+        font-weight: 600;
+        font-size: 0.9rem;
+
+
+    }
+}
