--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -102,7 +102,39 @@ main{
         background-color: #0281f9;
         font-weight: 600;
         font-size: 0.9rem;
+    }
+}
 
+// BANNER
+#banner{
+    background-color: #0281f9;
 
+    .container{
+        display: flex;
+        align-items: center;
+        padding: 50px;
+    }
+
+    ul{
+        width: 300px;
+        padding-left: 50px;
+    }
+
+    a{
+        color:white;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-weight: 400;
+        font-size: 0.9rem;
+
+        .box-logo{
+            width: 100px;
+            height:60px;
+        }
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
     }
 }
