--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -32,7 +32,7 @@ ul{
     display: flex;
     gap: 20px;
 
-    li a{
+    li .h-links{
         text-decoration: none;
         color: black;
         text-transform: uppercase;
@@ -135,6 +135,95 @@ main{
             width: 100%;
             height: 100%;
             object-fit: contain;
+        }
+    }
+}
+
+// FOOTER
+footer{
+    height: 500px;
+
+    .f-top{
+        background-image: url(../../public/img/footer-bg.jpg);
+        overflow: hidden;
+        height: 460px;
+
+        #col-links{
+            display: flex;
+            flex-direction: column;
+            flex-wrap: wrap;
+            max-height: 440px;
+
+            ul{
+                #link-title{
+                    color: white;
+                }
+                &:hover{
+                    #link-title{
+                        color: #0281f9;
+                    }
+                }
+            }
+
+            a{
+            color: grey;
+            text-decoration: none;
+            text-transform: capitalize;
+            font-weight: lighter;
+            font-size: 0.9rem;
+
+                &:hover{
+                    color: white;
+                }
+            }
+        }
+
+
+        #col-logo{
+            position: relative;
+
+            .box-logo{
+                position: relative;
+                height: 100%;
+                width: 80%;
+            }
+            img{
+                position: absolute;
+                top: -50px;
+                left: 30px;
+            }
+
+        }
+    }
+    .f-bottom{
+        height: 120px;
+        background-color: #303030;
+
+        button{
+            color:white;
+            text-transform: uppercase;
+            font-weight: bold;
+
+            border: 2px solid #0281f9;
+            padding: 12px;
+            background-color: transparent;
+
+            &:hover{
+                background-color: #0281f9;
+            }
+        }
+        span{
+            color: #0281f9;
+            text-transform: uppercase;
+            font-weight: bold;
+            font-size: 1.2rem;
+        }
+        img{
+            opacity: 0.25;
+
+            &:hover{
+                opacity: 1;
+            }
         }
     }
 }
