--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -61,11 +61,12 @@ ul{
 
 //MAIN
 main{
-    background-color: #1c1c1c;
-    padding-bottom: 40px;
-    padding-top: 55px;
     position: relative;
-
+    #all-comics{
+        background-color: #1c1c1c;
+        padding-bottom: 40px;
+        padding-top: 55px;
+    }
     h4{
         background-color: #0281f9;
         position: absolute;
@@ -225,5 +226,48 @@ footer{
                 opacity: 1;
             }
         }
+    }
+}
+// SHOW COMIC
+.divisor{
+    height: 60px;
+    background-color: #0281f9;
+    position: relative;
+    .box-image{
+        position: absolute;
+        top: -240px;
+        left: 400px;
+        width: 170px;
+        height: 270px;
+        border: 1px solid white;
+        scale: 1.1;
+    }
+    img{
+        width: 100%;
+        height: 100%;
+    }
+}
+#details{
+    padding: 50px 0;
+}
+.box-c2a{
+    background-color: #55ba59;
+    color: white;
+    padding: 10px 20px;
+}
+.price{
+    border-right: 1px solid black;
+}
+.more-details{
+    background-color: #f6f6f6;
+    padding: 40px 0 80px 0;
+    a{
+        text-decoration: none;
+        font-weight: 600;
+        font-size: 0.9rem;
+        color: #00b9e6;
+    }
+    h5{
+        font-size: 1rem;
     }
 }
